# swe-grep-rlm

./: .gitignore  README.md  pyproject.toml
data_collection/: HF_README.md  README.md  repos.txt  reputable_recent_repos.txt  scrape_github_prs.py
environments/swe_grep_rlm/: README.md  constants.py  dataset.py  environment.py  loader.py  pyproject.toml  rewards.py  rubric.py  swe_grep_rlm.py  tools.py
environments/swe_grep_rlm/.prime/: .env-metadata.json
environments/swe_grep_rlm/swe_grep_rlm/: __init__.py  constants.py  dataset.py  environment.py  loader.py  prompts.py  rewards.py  rubric.py  tools.py
