[project]
name = "swe-grep-rlm"
description = "RLM environment for code-search file retrieval over canonical repo tasks"
tags = ["rlm", "code-search", "retrieval", "multi-turn", "python", "repl"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.0",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swe_grep_rlm"]

[tool.hatch.build.targets.sdist]
include = [
    "/swe_grep_rlm",
    "/README.md",
    "/pyproject.toml",
]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1
